# big-estate

./: .env.example  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  compose.yaml  design.pen  package.json  pnpm-lock.yaml  skills-lock.json  terraform.tfstate  turbo.json
.github/workflows/: ci.yml  deploy-axum.yml  deploy-front.yml  preview-cleanup.yml  preview.yml  terraform-validate.yml
.moon/: toolchain.yml
apps/front/: .env.example  AGENTS.md  AUTH_FLOW.md  README.md  astro.config.mjs  components.json  design.pen  package-lock.json  package.json  tsconfig.json  turbo.json  worker-configuration.d.ts  wrangler.json  wrangler.jsonc
apps/server-axum/: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  package.json  readme.md  schema.md  turbo.json
apps/server-axum/migrations/: 20260311190000_create_auth_tables.sql  20260328120000_expand_marketplace_schema.sql  20260408120000_extend_wishlists_for_guest_and_colors.sql
apps/server-axum/scripts/: seed-demo.sh
apps/server-axum/seeds/: demo_listings.sql
apps/server-axum/src/: accounts.rs  app.rs  auth.rs  bootstrap.rs  config.rs  engagement.rs  error.rs  geo.rs  lib.rs  listings.rs  main.rs  models.rs  properties.rs  reference_data.rs  seller_dashboard.rs  users.rs  wishlist.rs
apps/server-axum/tests/: auth_flow.rs
apps/stock/: Cargo.toml  moon.yml
data/nieruchy/: homepage.html  (+12 more)
inf/: .gitignore  outputs.tf  providers.tf
infrastructure/: .terraform.lock.hcl  cloudflare.tf  hetzner.tf  main.tf  terraform.tfstate  terraform.tfvars.example  variables.tf  versions.tf
(+59 files in other folders)
