[package]
name = "server-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
async-trait = "0.1"
base64ct = { version = "1.8", features = ["alloc"] }
dotenvy = "0.15"
hex = "0.4"
http = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["json", "migrate", "postgres", "runtime-tokio-rustls", "time"] }
time = "0.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
http-body-util = "0.1"
serial_test = "3"
tower = { version = "0.5", features = ["util"] }
